<resources>
    <string name="app_name">CustomerInstallations</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mekan_ismi">Mekan İsmi</string>
    <string name="titleAddress" >Adres:</string>
    <string name="titleInstallationNumber">Tesisat Numarası:</string>
    <string name="titleAccountNumber">Sözleşme Hesap Numarası:</string>
    <string name="titleCurrentDebt">Güncel Borç:</string>
    <string name="titleBtnDetail">Görüntüle</string>
    <string name="titleDetailPage">KİŞİSEL BİLGİLER</string>
    <string name="title_TCKN">T.C. Kimlik Numaranız</string>
    <string name="titleNameSurname">Adınız ve Soyadınız</string>
    <string name="titleEmail">E-posta Adresiniz</string>
    <string name="titlePhoneNumber">Cep Telefonu Numaranız</string>
    <string name="helperTextTCKN">XXXXXXXXXXX</string>
    <string name="dummyAddress">İSTASYON MAH. MEDRESE SK. NO:6/9 MERKEZ TUZLA İSTANBUL</string>
    <string name="dummyIN">400XXXXXXX</string>
    <string name="dummyAN">123XXXXXXXX</string>
    <string name="debtPattern">₺ %d</string>
    <string name="dummyDebt">₺ 112,90</string>
    <string name="helperTextEmail">osman.kudu@enerjisa.com.tr</string>
    <string name="helperTextPhone">555 444 33 22</string>
    <string name="dummyDetailDept">Seçili sözleşme hesabınıza ait X  adet ödenmemiş fatura  bulunmaktadır.</string>
</resources>