<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detail.DetailFragment">


    <TextView
        android:id="@+id/tvTitleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDetailPage"
        android:layout_margin="10dp"
        android:textSize="@dimen/_15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNameSurname"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleNameSurname"
        app:helperText="Osman KUDU"

        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvTitleDetail"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNameSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTCKN"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_TCKN"
        app:helperText="@string/helperTextTCKN"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tilNameSurname"
        app:layout_constraintTop_toBottomOf="@id/tilNameSurname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietTCKN"
            android:maxLength="11"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titleEmail"
        app:helperText="@string/helperTextEmail"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tilTCKN"
        app:layout_constraintTop_toBottomOf="@id/tilTCKN">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietEmail"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhoneNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/titlePhoneNumber"
        app:helperText="(555) 444 33 22"
        android:layout_marginHorizontal="@dimen/_10dp"
        android:layout_marginTop="@dimen/_10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tilEmail"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPhoneNumber"
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPhoneNumber">

        <TableRow android:background="@drawable/border">

            <TextView
                android:padding="3dip"
                android:text="Vade Tarihi" />

            <TextView
                android:padding="3dip"
                android:text="Ödenecek Tutar" />
        </TableRow>

        <TableRow
            android:background="@drawable/border">

            <TextView
                android:padding="3dip"
                android:text="123" />

            <TextView
                android:padding="3dip"
                android:text="123" />

            <TextView
                android:padding="3dip"
                android:text="123" />

            <TextView
                android:padding="3dip"
                android:text="123" />
        </TableRow>

        <TableRow android:background="@drawable/border">

            <TextView
                android:padding="3dip"
                android:text="333" />

            <TextView
                android:padding="3dip"
                android:text="333" />

            <TextView
                android:padding="3dip"
                android:text="123" />

            <TextView
                android:padding="3dip"
                android:text="123" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>