<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_margin="@dimen/_10dp"
        android:background="@drawable/border"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/txtLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mekan_ismi"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:padding="@dimen/_10dp"
            android:layout_margin="@dimen/_10dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@+id/txtLocation"
            tools:layout_editor_absoluteX="@dimen/_10dp" />

        <TextView
            android:id="@+id/txtAddressTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/titleAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtAddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:ellipsize="end"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddressTitle" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/_10dp"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAddressInput" />

        <TextView
            android:id="@+id/txtInstallationNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/titleInstallationNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <TextView
            android:id="@+id/txtAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            android:text="@string/titleAccountNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInstallationNumber" />

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="@dimen/_10dp"
            android:background="@android:color/darker_gray"
            android:padding="@dimen/_10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAccountNumber" />

        <TextView
            android:id="@+id/txtCurrentDebt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10dp"
            android:text="@string/titleCurrentDebt"
            android:textSize="@dimen/_15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/bg_button"
            android:text="@string/titleBtnDetail"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/_10dp"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtCurrentDebt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
